Fixed source of BIRS photo, and improved quality

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -166,6 +166,16 @@
                         </figure>
 
                         <figure>
+                        <a href="../images/2003_BIRS_groupphoto.jpg">
+                        <img src="../images/2003_BIRS_groupphoto.jpg" alt="BIRS 2001 Group Photo"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        BIRS workshop 2001. Source: <a href="">https://www.birs.ca/events/2003/5-day-workshops/03w5014</a>
+                        </figcaption>
+                        </figure>
+
+                        <figure>
                         <a href="../images/2005_DunkIsland_RichardBrak.jpg">
                         <img src="../images/2005_DunkIsland_RichardBrak.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
@@ -184,16 +194,6 @@
                         <figcaption> 
                         Source: Guttmannfest at Dunk Island 2005, photo by Buks
                         Janse van Rensburg.
-                        </figcaption>
-                        </figure>
-
-                        <figure>
-                        <a href="../images/Sumners2007GroupPhoto.png">
-                        <img src="../images/Sumners2007GroupPhoto.png" alt="Richard Brak"
-                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
-                        </a>
-                        <figcaption> 
-                        Source: Stu Whittington.
                         </figcaption>
                         </figure>
 
