Added title and abstract by Mireille

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -76,14 +76,19 @@
                     <td>Mireille Bousquet-Mélou</td>
                     <td><em> 
                             <!-- <a href="javascript: void(0);" onclick="toggle('abstract0')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract0');toggle('abstract990')">
+                                A mini-survey on walks in a cone
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract0" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract0" style="display:none;"> 
+                        I will review some more or less recent results on the
+                        enumeration of walks confined to a cone, with an
+                        emphasis on algebraicity properties.
+                        </abstract></td>
+                </tr>
                 <tr>
                     <td style="text-align:right">9:00am</td>
                     <td>Thomas Prellberg</td>
@@ -308,14 +313,18 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract0')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract0');toggle('abstract990')">
+                                A mini-survey on walks in a cone
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td  colspan="2"><abstract id="abstract0" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td  colspan="2"><abstract id="abstract990" style="display:none;"> 
+                        I will review some more or less recent results on the
+                        enumeration of walks confined to a cone, with an
+                        emphasis on algebraicity properties.
+                        </abstract></td>
+                </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr>
                     <td style="text-align:right">9:00am</td>
