Added more photos

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -146,12 +146,32 @@
 
 
                         <figure>
+                        <a href="../images/1995_RichardBrak_FromChrisSoteros.jpg">
+                        <img src="../images/1995_RichardBrak_FromChrisSoteros.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Group photo taken in Melbourne, 1995. Photo provided by Chris Soteros.
+                        </figcaption>
+                        </figure>
+                        <figure>
+                        <a href="../images/stu046.jpg">
+                        <img src="../images/stu046.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Group photo taken in Melbourne, 1995. Photo provided by Chris Soteros,
+                        probably taken by Stu Whittington.
+                        </figcaption>
+                        </figure>
+                        <figure>
                         <a href="../images/RichardBrak2001_P0000394.jpg">
                         <img src="../images/RichardBrak2001_P0000394.jpg" alt="Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-            Source: CMS Summer Meeting 2001, photo by Ward Wurtz.            
+            <a href="https://www2.cms.math.ca/Events/summer01/photos/">
+                CMS Summer Meeting 2001</a>, photo by Ward Wurtz.            
                         </figcaption>
                         </figure>
 
@@ -161,19 +181,53 @@
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-            Source: CMS Summer Meeting 2001, photo by Ward Wurtz.            
+            <a href="https://www2.cms.math.ca/Events/summer01/photos/">
+                CMS Summer Meeting 2001</a>, photo by Ward Wurtz.            
                         </figcaption>
                         </figure>
 
+                        <figure>
+                        <a href="../images/dewittstucms01a005_1.jpg">
+                        <img src="../images/dewittstucms01a005_1.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        <a href="https://www2.cms.math.ca/Events/summer01/photos/">
+                            CMS Summer Meeting 2001</a>, photo by Peter
+                        Beszterda.
+                                                </figcaption>
+                        </figure>
                         <figure>
                         <a href="../images/2003_BIRS_groupphoto.jpg">
                         <img src="../images/2003_BIRS_groupphoto.jpg" alt="BIRS 2001 Group Photo"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-                        BIRS workshop 2001. Source: <a href="">https://www.birs.ca/events/2003/5-day-workshops/03w5014</a>
+                          <a
+                            href="https://www.birs.ca/events/2003/5-day-workshops/03w5014">BIRS workshop 2003.</a>
                         </figcaption>
                         </figure>
+
+                        <!-- <figure> -->
+                        <!-- <a href="../images/"> -->
+                        <!-- <img src="../images/" alt="Richard Brak" -->
+                        <!-- width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
+                        <!-- </a> -->
+                        <!-- <figcaption> --> 
+                        <!-- </figcaption> -->
+                        <!-- </figure> -->
+
+                        <figure>
+                        <a href="../images/2005_RichardBrakDunkIsland_FromThomasPrellberg.jpg">
+                        <img src="../images/2005_RichardBrakDunkIsland_FromThomasPrellberg.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard directing the group photo at Guttmannfest, Dunk Island 2005, photo by 
+                        Thomas Prellberg.
+                        </figcaption>
+                        </figure>
+
 
                         <figure>
                         <a href="../images/2005_DunkIsland_RichardBrak.jpg">
@@ -181,8 +235,8 @@
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-                        Source: Guttmannfest at Dunk Island 2005, photo by Buks
-                        Janse van Rensburg.
+                        Richard directing the group photo at Guttmannfest, Dunk
+                        Island 2005, photo by by Buks Janse van Rensburg.
                         </figcaption>
                         </figure>
 
@@ -192,18 +246,8 @@
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-                        Source: Guttmannfest at Dunk Island 2005, photo by Buks
+                        Richard and Chris, Guttmannfest at Dunk Island 2005, photo by Buks
                         Janse van Rensburg.
-                        </figcaption>
-                        </figure>
-
-                        <figure>
-                        <a href="../images/Sumners2007GroupPhotoB.png" target="_blank"><img src="../images/Sumners2007GroupPhotoB.png" alt="Richard Brak"
-                        width="100%" style="min-width:200px;margin: 10px 10px
-                        10px 10px" />
-                        </a>
-                        <figcaption> 
-                        Source: Stu Whittington.
                         </figcaption>
                         </figure>
 
