--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -225,19 +225,25 @@
                     <td style="text-align:right">2:30pm</td>
                     <td>Iwan Jensen</td>
                     <td><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract9')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract9');toggle('abstract999')">
+                             Odds and ends about osculating paths
+                            </a> 
                     </em></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract9" style="display:none;"> 
+                        We present some odds and ends regarding osculating
+                        paths with 4 and 5 walkers. Exact enumerations are used
+                        to calculate the exact generating function for walkers
+                        in watermelon and star configurations and some critical
+                        properties are extracted.
+                        </abstract></td>
                 </tr>
                 <tr bgcolor="#E0E0E0">
                     <td  style="text-align:right">3:00pm</td>
                     <td colspan="2"> Afternoon tea</td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract9" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
                 <tr>
                     <td style="text-align:right">3:30pm</td>
                     <td>Aleks Owczarek</td>
@@ -487,20 +493,25 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract9')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract9');toggle('abstract999')">
+                             Odds and ends about osculating paths
+                            </a> 
                     </em></td>
+                </tr>
+                <tr>
+                    <td  colspan="2"><abstract id="abstract999" style="display:none;"> 
+                        We present some odds and ends regarding osculating
+                        paths with 4 and 5 walkers. Exact enumerations are used
+                        to calculate the exact generating function for walkers
+                        in watermelon and star configurations and some critical
+                        properties are extracted.
+                        </abstract></td>
                 </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr bgcolor="#E0E0E0">
                     <td  style="text-align:right">3:00pm</td>
                     <td colspan="1"> Afternoon tea</td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract9" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr>
                     <td style="text-align:right">3:30pm</td>
