--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -160,8 +160,8 @@
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-                        Group photo taken in Melbourne, 1995. Photo provided by Chris Soteros,
-                        probably taken by Stu Whittington.
+                        Group photo taken in Melbourne, 1995. Photo provided by
+                        Chris Soteros.
                         </figcaption>
                         </figure>
                         <figure>
