--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -45,28 +45,7 @@
             <p>
             Click on any of the photos below to load the full-sized image.
             </p>
-            <!-- <div class="image"> -->
-            <!--     <img src="../images/RichardBrak.jpg" alt="Richard Brak" width="27%" -->
-            <!--     style="float:right;min-width:100px;margin: 10px 0px 0px -->
-            <!--     10px" /> -->
-            <!--     <br /> -->
-            <!--     <p class="caption"> --> 
-            <!--     Hello -->
-            <!--     </p> -->
-            <!-- </div> -->
-
-            <!-- <div class="image"> -->
-            <!--     <img src="../images/RichardBrak.jpg" alt="Richard Brak" width="27%" -->
-            <!--     style="float:right;min-width:100px;margin: 10px 0px 0px -->
-            <!--     10px" /> -->
-            <!--     <br /> -->
-            <!--     <p class="caption"> --> 
-            <!--     Hello -->
-            <!--     </p> -->
-            <!-- </div> -->
-            <!--     <br /> -->
-
-
+            <!-- Saving this to remember table format. -->
             <!-- <table> -->
             <!--     <tr> -->
             <!--         <td> -->
@@ -88,56 +67,6 @@
             <!--             </a> -->
             <!--             <figcaption> --> 
             <!-- Source: CMS Summer Meeting 2001, photo by Ward Wurtz. -->            
-            <!--             </figcaption> -->
-            <!--             </figure> -->
-            <!--         </td> -->
-            <!--     </tr> -->
-            <!--     <tr> -->
-            <!--         <td> -->
-            <!--             <figure> -->
-            <!--             <a href="../images/2005_DunkIsland_RichardBrak.jpg"> -->
-            <!--             <img src="../images/2005_DunkIsland_RichardBrak.jpg" alt="Richard Brak" -->
-            <!--             width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
-            <!--             </a> -->
-            <!--             <figcaption> --> 
-            <!--             Source: Guttmannfest at Dunk Island 2005, photo by Buks -->
-            <!--             Janse van Rensburg. -->
-            <!--             </figcaption> -->
-            <!--             </figure> -->
-            <!--         </td> -->
-            <!--         <td> -->
-            <!--             <figure> -->
-            <!--             <a href="../images/2005_DunkIsland_ChrisSoteros_RichardBrak.jpg"> -->
-            <!--             <img src="../images/2005_DunkIsland_ChrisSoteros_RichardBrak.jpg" alt="Richard Brak" -->
-            <!--             width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
-            <!--             </a> -->
-            <!--             <figcaption> --> 
-            <!--             Source: Guttmannfest at Dunk Island 2005, photo by Buks -->
-            <!--             Janse van Rensburg. -->
-            <!--             </figcaption> -->
-            <!--             </figure> -->
-            <!--         </td> -->
-            <!--     </tr> -->
-            <!--     <tr> -->
-            <!--         <td> -->
-            <!--             <figure> -->
-            <!--             <a href="../images/Sumners2007GroupPhoto.png"> -->
-            <!--             <img src="../images/Sumners2007GroupPhoto.png" alt="Richard Brak" -->
-            <!--             width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
-            <!--             </a> -->
-            <!--             <figcaption> --> 
-            <!--             Source: Stu Whittington. -->
-            <!--             </figcaption> -->
-            <!--             </figure> -->
-            <!--         </td> -->
-            <!--         <td> -->
-            <!--             <figure> -->
-            <!--             <a href="../images/Sumners2007GroupPhotoB.png" target="_blank"><img src="../images/Sumners2007GroupPhotoB.png" alt="Richard Brak" -->
-            <!--             width="100%" style="min-width:200px;margin: 10px 10px -->
-            <!--             10px 10px" /> -->
-            <!--             </a> -->
-            <!--             <figcaption> --> 
-            <!--             Source: Stu Whittington. -->
             <!--             </figcaption> -->
             <!--             </figure> -->
             <!--         </td> -->
@@ -208,7 +137,31 @@
                         </figcaption>
                         </figure>
 
-                        <!-- <figure> -->
+                        <figure>
+                        <a href="../images/2003_f1010004_ByChrisSoteros.jpg">
+                        <img src="../images/2003_f1010004_ByChrisSoteros.jpg" alt="Group photo including Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                          <a
+                            href="https://www.birs.ca/events/2003/5-day-workshops/03w5014">BIRS
+                            workshop 2003</a>, photo by Chris Soteros.
+                        </figcaption>
+                        </figure>
+                        <figure>
+                        <figure>
+                        <a href="../images/2003_f1010024_ByChrisSoteros.jpg">
+                        <img src="../images/2003_f1010024_ByChrisSoteros.jpg" alt="Group photo including Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                          <a
+                            href="https://www.birs.ca/events/2003/5-day-workshops/03w5014">BIRS
+                            workshop 2003</a>, photo by Chris Soteros.
+                        </figcaption>
+                        </figure>
+                        <figure>
+
                         <!-- <a href="../images/"> -->
                         <!-- <img src="../images/" alt="Richard Brak" -->
                         <!-- width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
@@ -216,6 +169,17 @@
                         <!-- <figcaption> --> 
                         <!-- </figcaption> -->
                         <!-- </figure> -->
+
+                        <figure>
+                        <a href="../images/2005_GroupPhoto1_FromThomasPrellberg.jpg">
+                        <img src="../images/2005_GroupPhoto1_FromThomasPrellberg.jpg" alt="Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Richard directing the group photo at Guttmannfest, Dunk Island 2005, photo by 
+                        Thomas Prellberg.
+                        </figcaption>
+                        </figure>
 
                         <figure>
                         <a href="../images/2005_RichardBrakDunkIsland_FromThomasPrellberg.jpg">
@@ -226,7 +190,6 @@
                         Richard directing the group photo at Guttmannfest, Dunk Island 2005, photo by 
                         Thomas Prellberg.
                         </figcaption>
-                        </figure>
 
 
                         <figure>
@@ -236,7 +199,19 @@
                         </a>
                         <figcaption> 
                         Richard directing the group photo at Guttmannfest, Dunk
-                        Island 2005, photo by by Buks Janse van Rensburg.
+                        Island 2005, photo by Buks Janse van Rensburg.
+                        </figcaption>
+                        </figure>
+
+                        </figure>
+                        <figure>
+                        <a href="../images/2005_GroupPhoto2_FromThomasPrellberg.jpg">
+                        <img src="../images/2005_GroupPhoto2_FromThomasPrellberg.jpg" alt="Group photo at Guttmannfest, Dunk Island."
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        The group assembles at Guttmannfest, Dunk Island 2005, photo by 
+                        Thomas Prellberg. Clearly it was like herding cats.
                         </figcaption>
                         </figure>
 
