Updated photo caption

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -81,6 +81,7 @@
                         </a>
                         <figcaption> 
                         Group photo taken in Melbourne, 1995. Photo provided by Chris Soteros.
+                        (Possibly taken by Chris Soteros.)
                         </figcaption>
                         </figure>
                         <figure>
@@ -90,7 +91,8 @@
                         </a>
                         <figcaption> 
                         Group photo taken in Melbourne, 1995. Photo provided by
-                        Chris Soteros.
+                        Chris Soteros. 
+                        (Possibly taken by Tony Guttmann.)
                         </figcaption>
                         </figure>
                         <figure>
