Added link to Richard's symposium from my homepage, to help with indexing

--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@
                     Google Alerts for detection of contract cheating</a>.
                 </p>
                 <p>
+                <b>14 January, 2022:</b> I've created a webpage for a symposium
+                in memory of my friend Richard Brak,
+                <a href="https://clisby.net/brak/">
+                    A Tour of Combinatorics and Statistical Mechanics: In Memory
+                    of Richard Brak</a>.
+                </p>
+                <p>
                 <b>Recent articles (updated April 2021)</b>
                 </p>
                 <ul>
