--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -150,7 +150,7 @@
                             workshop 2003</a>, photo by Chris Soteros.
                         </figcaption>
                         </figure>
-                        <figure>
+
                         <figure>
                         <a href="../images/2003_f1010024_ByChrisSoteros.jpg">
                         <img src="../images/2003_f1010024_ByChrisSoteros.jpg" alt="Group photo including Richard Brak"
@@ -163,6 +163,7 @@
                         </figcaption>
                         </figure>
 
+                        <!-- <figure> -->
                         <!-- <a href="../images/"> -->
                         <!-- <img src="../images/" alt="Richard Brak" -->
                         <!-- width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" /> -->
@@ -191,6 +192,7 @@
                         Richard directing the group photo at Guttmannfest, Dunk Island 2005, photo by 
                         Thomas Prellberg.
                         </figcaption>
+                        </figure>
 
 
                         <figure>
@@ -204,7 +206,6 @@
                         </figcaption>
                         </figure>
 
-                        </figure>
                         <figure>
                         <a href="../images/2005_GroupPhoto2_FromThomasPrellberg.jpg">
                         <img src="../images/2005_GroupPhoto2_FromThomasPrellberg.jpg" alt="Group photo at Guttmannfest, Dunk Island."
