minor caption update

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -213,7 +213,7 @@
                         </a>
                         <figcaption> 
                         The group assembles at Guttmannfest, Dunk Island 2005, photo by 
-                        Thomas Prellberg. Clearly it was like herding cats.
+                        Thomas Prellberg. Clearly it was like herding cats!
                         </figcaption>
                         </figure>
 
