Added photos from Mireille.

--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -75,13 +75,30 @@
 
 
                         <figure>
-                        <a href="../images/1995_RichardBrak_FromChrisSoteros.jpg">
-                        <img src="../images/1995_RichardBrak_FromChrisSoteros.jpg" alt="Richard Brak"
+                        <a href="../images/1995a.jpg">
+                        <img src="../images/1995a.jpg" alt="Group photo including Richard Brak"
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-                        Group photo taken in Melbourne, 1995. Photo provided by Chris Soteros.
-                        (Possibly taken by Chris Soteros.)
+                        Group photo taken in Melbourne, 1995. Photo provided by Mireille Bousquet-Mélou.
+                        </figcaption>
+                        </figure>
+                        <figure>
+                        <a href="../images/1995b.jpg">
+                        <img src="../images/1995b.jpg" alt="Group photo including Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Group photo taken in Melbourne, 1995. Photo provided by Mireille Bousquet-Mélou.
+                        </figcaption>
+                        </figure>
+                        <figure>
+                        <a href="../images/1995c.jpg">
+                        <img src="../images/1995c.jpg" alt="Group photo including Richard Brak"
+                        width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
+                        </a>
+                        <figcaption> 
+                        Group photo taken in Melbourne, 1995. Photo provided by Mireille Bousquet-Mélou. (Previous version supplied by Chris Soteros; photo possibly taken by Chris Soteros.)
                         </figcaption>
                         </figure>
                         <figure>
