--- a/brak/photos/index.html
+++ b/brak/photos/index.html
@@ -89,7 +89,7 @@
                         width="100%" style="min-width:200px;margin: 10px 10px 10px 10px" />
                         </a>
                         <figcaption> 
-                        Group photo taken in Melbourne, 1995. Photo provided by Mireille Bousquet-Mélou.
+                        Aleks and Richard, taken in Melbourne, 1995. Photo provided by Mireille Bousquet-Mélou.
                         </figcaption>
                         </figure>
                         <figure>
