Added Aleks's talk title and abstract.

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -248,15 +248,26 @@
                     <td style="text-align:right">3:30pm</td>
                     <td>Aleks Owczarek</td>
                     <td><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract10')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract9910');toggle('abstract10')">
+                            Critical scaling of lattice polymers confined to a box without endpoint restriction
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract10" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract10" style="display:none;"> 
+                        We present a study of self-avoiding walks on the square lattice restricted to a
+                        square box of side L weighted by a length fugacity without restriction of their
+                        end points. The model admits a phase transition between an ‘empty’ phase, where
+                        the average length of walks are finite and the density inside large boxes goes
+                        to zero, to a ‘dense’ phase, where there is a finite positive density. We prove
+                        various bounds on the free energy and develop a scaling theory for the phase
+                        transition based on the standard theory for unconstrained polymers. We compare
+                        this model to unrestricted walks and walks whose endpoints are fixed at the
+                        opposite corners of a box, as well as Hamiltonian walks. We use Monte Carlo
+                        simulations to verify predicted values for three key exponents.
+                        </abstract></td>
+                </tr>
                 <tr>
                     <td style="text-align:right">4:00pm</td>
                     <td>Nicholas Beaton</td>
@@ -519,14 +530,25 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract10')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract9910');toggle('abstract10')">
+                            Critical scaling of lattice polymers confined to a box without endpoint restriction
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td  colspan="2"><abstract id="abstract10" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td  colspan="2"><abstract id="abstract9910" style="display:none;"> 
+                        We present a study of self-avoiding walks on the square lattice restricted to a
+                        square box of side L weighted by a length fugacity without restriction of their
+                        end points. The model admits a phase transition between an ‘empty’ phase, where
+                        the average length of walks are finite and the density inside large boxes goes
+                        to zero, to a ‘dense’ phase, where there is a finite positive density. We prove
+                        various bounds on the free energy and develop a scaling theory for the phase
+                        transition based on the standard theory for unconstrained polymers. We compare
+                        this model to unrestricted walks and walks whose endpoints are fixed at the
+                        opposite corners of a box, as well as Hamiltonian walks. We use Monte Carlo
+                        simulations to verify predicted values for three key exponents.
+                        </abstract></td>
+                </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr>
                     <td style="text-align:right">4:00pm</td>
