Added credit for photo of Richard on homepage.

--- a/brak/index.html
+++ b/brak/index.html
@@ -27,11 +27,21 @@
                 <h1 style="display:inline-block;line-height:1.0em;margin-bottom:-0.3em;">
                     A Tour of Combinatorics and Statistical Mechanics: In Memory of Richard Brak
                 </h1>
-                <div class="image">
-                <img src="images/RichardBrak.jpg" alt="Richard Brak" width="27%"
-                style="float:right;min-width:100px;margin: 10px 0px 0px
-                10px" />
-                </div>
+                <!-- Original figure. Deleted as I needed to add caption. -->
+                <!-- <div class="image"> -->
+                <!-- <img src="images/RichardBrak.jpg" alt="Richard Brak" width="27%" -->
+                <!-- style="float:right;min-width:100px;margin: 10px 0px 0px -->
+                <!-- 10px" /> -->
+                <!-- </div> -->
+
+                        <figure style="width:27%;min-width:100px;float:right">
+                        <a href="images/RichardBrak.jpg">
+                <img src="images/RichardBrak.jpg" alt="Richard Brak" width="100%" style="margin: 10px 0px 0px 10px" />
+                        </a>
+                        <figcaption> 
+                        <small>Richard at Guttmannfest 2015, photo by Jesper Jacobsen.</small>
+                        </figcaption>
+                        </figure>
 
                 <div class="desktop">
                     <h3>
