removed google analytics from mcalgorithms

--- a/mcalgorithms/index.html
+++ b/mcalgorithms/index.html
@@ -7,7 +7,7 @@
 <head>
     <title>A satellite conference of Statphys 24. | Monte Carlo Algorithms in Statistical Physics</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="google-site-verification" content="SKwgoHFCVp__nEkmY0gROMlXux-K0wCEnNCyfVwfpCk" />
+<!-- <meta name="google-site-verification" content="SKwgoHFCVp__nEkmY0gROMlXux-K0wCEnNCyfVwfpCk" /> -->
 <link rel="shortcut icon" href="misc/favicon.ico" type="image/x-icon" />
     <link type="text/css" rel="stylesheet" media="all" href="modules/drutex/drutex44c2.css?P" />
 <link type="text/css" rel="stylesheet" media="all" href="modules/gallery_assist/css/gallery_assist44c2.css?P" />
@@ -22,11 +22,11 @@
 <link type="text/css" rel="stylesheet" media="print" href="themes/garland/print44c2.css?P" />
     <script type="text/javascript" src="misc/jquery44c2.js?P"></script>
 <script type="text/javascript" src="misc/drupal44c2.js?P"></script>
-<script type="text/javascript">
-<!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, { "basePath": "/mcalgorithms/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip" } });
-//--><!]]>
-</script>
+<!--<script type="text/javascript"> -->
+<!--<1!--//--><![CDATA[//><1!-- -->
+<!--jQuery.extend(Drupal.settings, { "basePath": "/mcalgorithms/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip" } }); -->
+<!--//--><!]]> -->
+<!--</script> -->
     <!--[if lt IE 7]>
       <link type="text/css" rel="stylesheet" media="all" href="/mcalgorithms/themes/garland/fix-ie.css" />    <![endif]-->
   </head>
@@ -157,17 +157,17 @@ Please <a href="contact.html">contact</a> the organisers if you are interested i
   </div>
 <!-- /layout -->
 
-  <script type="text/javascript" src="modules/google_analytics/googleanalytics44c2.js?P"></script>
-<script type="text/javascript">
-<!--//--><![CDATA[//><!--
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-//--><!]]>
-</script>
-<script type="text/javascript">
-<!--//--><![CDATA[//><!--
-try{var pageTracker = _gat._getTracker("UA-12740372-2");pageTracker._trackPageview();} catch(err) {}
-//--><!]]>
-</script>
+  <!--<script type="text/javascript" src="modules/google_analytics/googleanalytics44c2.js?P"></script> -->
+<!--<script type="text/javascript"> -->
+<!--<1!--//--><![CDATA[//><1!-- -->
+<!--var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E")); -->
+<!--//--><!]]> -->
+<!--</script> -->
+<!--<script type="text/javascript"> -->
+<!--<1!--//--><![CDATA[//><1!-- -->
+<!--try{var pageTracker = _gat._getTracker("UA-12740372-2");pageTracker._trackPageview();} catch(err) {} -->
+<!--//--><!]]> -->
+<!--</script> -->
   </body>
 
 <!-- Mirrored from lattice.complex.unimelb.edu.au/mcalgorithms/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 11 Nov 2016 03:51:28 GMT -->
