Added Chris's title and abstract.

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -161,15 +161,27 @@
                     <td style="text-align:right">11:30am</td>
                     <td>Chris Soteros</td>
                     <td><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract4')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract4');toggle('abstract994')">
+                                Entanglements in lattice polygons in tubes
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract4" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract4" style="display:none;"> 
+                        Lattice polygon models are useful for exploring the probability of knotting and
+                        linking in polymers.  I will review some recent exact and Monte Carlo results
+                        regarding how the probability of a given knot or link type scales with polygon
+                        size for polygons in tubular subsets of the simple cubic lattice. Exact and
+                        theoretical results for the smallest tube that admits non-trivial knots (the
+                        infinity x 2 x 1 tube) confirm a conjecture that the entropic critical exponent
+                        goes up by one for each prime factor in the knot-decomposition.  Transfer-Matrix
+                        Monte-Carlo evidence indicates that the same scaling form holds for some other
+                        small tube sizes.   Much of this work was done in collaboration with Nick
+                        Beaton, Jeremy Eng, Kai Ishihara, Puttipong Pongtanapaisan, Rob Scharein, Koya
+                        Shimokawa and Mariel Vazquez. 
+                        </abstract></td>
+                </tr>
                 <tr>
                     <td style="text-align:right">12:00pm</td>
                     <td>Andrew Rechnitzer</td>
@@ -426,14 +438,26 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract4')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);" onclick="toggle('abstract4');toggle('abstract994')">
+                                Entanglements in lattice polygons in tubes
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td  colspan="2"><abstract id="abstract4" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td  colspan="2"><abstract id="abstract994" style="display:none;"> 
+                        Lattice polygon models are useful for exploring the probability of knotting and
+                        linking in polymers.  I will review some recent exact and Monte Carlo results
+                        regarding how the probability of a given knot or link type scales with polygon
+                        size for polygons in tubular subsets of the simple cubic lattice. Exact and
+                        theoretical results for the smallest tube that admits non-trivial knots (the
+                        infinity x 2 x 1 tube) confirm a conjecture that the entropic critical exponent
+                        goes up by one for each prime factor in the knot-decomposition.  Transfer-Matrix
+                        Monte-Carlo evidence indicates that the same scaling form holds for some other
+                        small tube sizes.   Much of this work was done in collaboration with Nick
+                        Beaton, Jeremy Eng, Kai Ishihara, Puttipong Pongtanapaisan, Rob Scharein, Koya
+                        Shimokawa and Mariel Vazquez. 
+                        </abstract></td>
+                </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr>
                     <td style="text-align:right">12:00pm</td>
