Added registration deadlines

--- a/brak/register/index.html
+++ b/brak/register/index.html
@@ -34,8 +34,17 @@
                     </h3>
                 </div>
             <p>
+            Registration is free but essential.
+            </p>
+            <p>
             Please use the registration form below to indicate whether you will
-            be participating face-to-face or virtually.
+            be participating in person or online.
+            </p>
+            <p>
+            The deadline for in-person registration is <b>Monday, 31 January</b>.
+            </p>
+            <p>
+            The deadline for online registration is <b>Friday, 4 February</b>.
             </p>
             <p>
             You may also use the form to leave a message for inclusion on this
