Added Gary's title and abstract

--- a/brak/program/index.html
+++ b/brak/program/index.html
@@ -148,15 +148,21 @@
                     <td style="text-align:right">11:00am</td>
                     <td>Gary Iliev</td>
                     <td><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract3')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);"
+                                onclick="toggle('abstract3');toggle('abstract993')">
+                                Localization of semiflexible polymers near a penetrable interface
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td></td> -->
-                <!--     <td  colspan="2"><abstract id="abstract3" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td></td>
+                    <td  colspan="2"><abstract id="abstract3" style="display:none;"> 
+                    In this talk, we will look at directed walk models related to bilateral Dyck paths interacting with two immiscible solvents and a penetrable interface.  The paths will also carry a "stiffness" parameter that decorates pairs of collinear steps.
+                    <br />
+                    <br />
+                    By varying the energy and stiffness parameters, we build up a picture of the phase diagram and understanding of the phase behaviour of such polymeric systems.
+                       </abstract></td>
+                </tr>
                 <tr>
                     <td style="text-align:right">11:30am</td>
                     <td>Chris Soteros</td>
@@ -423,14 +429,20 @@
                 </tr>
                 <tr>
                     <td  colspan="2"><em> 
-                            <!-- <a href="javascript: void(0);" onclick="toggle('abstract3')"> -->
-                                TBA
-                            <!-- </a> --> 
+                            <a href="javascript: void(0);"
+                                onclick="toggle('abstract3');toggle('abstract993')">
+                                Localization of semiflexible polymers near a penetrable interface
+                            </a> 
                     </em></td>
                 </tr>
-                <!-- <tr> -->
-                <!--     <td  colspan="2"><abstract id="abstract3" style="display:none;"> Abstract</abstract></td> -->
-                <!-- </tr> -->
+                <tr>
+                    <td  colspan="2"><abstract id="abstract993" style="display:none;"> 
+                    In this talk, we will look at directed walk models related to bilateral Dyck paths interacting with two immiscible solvents and a penetrable interface.  The paths will also carry a "stiffness" parameter that decorates pairs of collinear steps.
+                    <br />
+                    <br />
+                    By varying the energy and stiffness parameters, we build up a picture of the phase diagram and understanding of the phase behaviour of such polymeric systems.
+                       </abstract></td>
+                </tr>
                 <tr> <td colspan="2">&nbsp;</td> </tr>
                 <tr>
                     <td style="text-align:right">11:30am</td>
